--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="start_location_sharing">Start location sharing</string>
+    <string name="hint_name">Enter Name</string>
 </resources>
